Heros no longer display on mobile viewports.
Added display: none to .heros and their spacers for {max-width: 650px}.

--- a/ilsummer.css
+++ b/ilsummer.css
@@ -522,6 +522,8 @@ a {
 		border-top: 2px solid rgba(255,227,77, 0.3);
 	}
 
+	.hero,
+	.hero-spacer,
 	.sponsor-logos {
 		display: none;
 	}
